--- a/src/components/Post.module.css
+++ b/src/components/Post.module.css
@@ -12,6 +12,7 @@
   line-height: 1.6;
   color: var(--gray-300);
   margin-top: 1.5rem;
+  word-wrap: break-word;
 }
 
 .content p {
